dropdown button compelted

--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -1,9 +1,17 @@
-<mvc:View controllerName="zdropdown.zdropdown.controller.View1" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
+<mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:c="sap.ui.core" controllerName="zdropdown.zdropdown.controller.View1" displayBlock="true">
 	<Shell id="shell">
 		<App id="app">
 			<pages>
-				<Page id="page" title="{i18n>title}">
-					<content></content>
+				<Page id="page" title="{i18n>title}" xmlns:cd="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1" cd:w5g.dt.context="/POHeaderSet">
+					<content>
+						
+					<Select xmlns:sap.ui.core="sap.ui.core" id="__select0" items="{/POHeaderSet?$select=Ebeln}">
+					    <items>
+					        <sap.ui.core:ListItem id="__item0" text="{Ebeln}"/>
+					     </items>
+					</Select>
+						
+					</content>
 				</Page>
 			</pages>
 		</App>
